<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            style="@style/TextStyle2"
            android:layout_marginTop="46dp"
            android:layout_marginLeft="33dp"
            android:id="@+id/d_wifi_name_new_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Wifi-2232"
            />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:rowCount="4"
            android:columnCount="2"
            android:background="@drawable/rounded_corner_medium">


            <TextView
                style="@style/TextStyle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:layout_marginLeft="20dp"
                android:text="@string/strength"/>

            <TextView
                style="@style/TextStyle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:layout_marginLeft="90dp"
                android:text="@string/ping_2"/>

            <TextView
                android:id="@+id/d_strength_new_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:lineSpacingExtra="4sp"
                android:layout_marginLeft="20dp"
                android:text="@string/nothing"/>

            <TextView
                android:id="@+id/d_ping_new_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:lineSpacingExtra="4sp"
                android:layout_marginLeft="90dp"
                android:text="@string/nothing"/>

            <TextView
                style="@style/TextStyle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:layout_marginLeft="20dp"
                android:text="@string/lost2"/>

            <TextView
                style="@style/TextStyle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:layout_marginLeft="90dp"
                android:text="@string/time"/>

            <TextView
                android:id="@+id/d_lost_new_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:lineSpacingExtra="4sp"
                android:layout_marginLeft="20dp"
                android:text="@string/nothing"/>

            <TextView
                android:id="@+id/d_dl_new_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:lineSpacingExtra="4sp"
                android:layout_marginLeft="90dp"
                android:text="@string/nothing"/>
        </GridLayout>

        <RelativeLayout
            android:id="@+id/r_5"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:background="@drawable/rounded_corner_medium">

            <AutoCompleteTextView
                android:id="@+id/d_text_edit_new_scan"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Tap to edit"
                android:textColorHint="@color/warm_grey"
                android:textColor="#FFFFFF"
                android:layout_centerVertical="true"
                android:textSize="24sp"
                android:inputType="text"
                android:imeOptions="actionDone"/>

            <ImageButton
                android:id="@+id/d_validate_new_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/d_refresh_new_scan"
                android:layout_marginRight="30dp"
                android:background="#00FFFFFF"
                android:layout_centerVertical="true"
                android:scaleX="1.6"
                android:scaleY="1.6"
                android:src="@drawable/validate"
                android:onClick="saveData"/>

            <ImageButton
                android:id="@+id/d_refresh_new_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:background="#00FFFFFF"
                android:layout_centerVertical="true"
                android:scaleX="1.6"
                android:scaleY="1.6"
                android:src="@drawable/refresh"
                android:onClick="launch_test"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/d_next_new_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r_5"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_corner_medium"
            android:layout_centerHorizontal="true"
            android:onClick="nextRoom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:lineSpacingExtra="4sp"
                android:layout_margin="12dp"
                android:text="Next room>"/>
        </LinearLayout>

        <TextView
            android:id="@+id/d_work_in_progress"
            android:layout_width="wrap_content"
            android:textColor="@color/bright_blue"
            android:layout_height="wrap_content"
            android:text="Work in progress..."
            android:layout_centerHorizontal="true"
            android:layout_below="@id/r_5"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>



    </RelativeLayout>

</RelativeLayout>
